# botanist

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  mypy.ini
.github/workflows/: avr.yml  cmake.yml  unittest.yml
cli/: CMakeLists.txt  calc.cpp  main.cpp
doc_sources/: apirefs.md  mainpage.md
docs/: analyser_8hpp.html  analyser_8hpp_source.html  annotated.html  apirefs.html  classbotanist_1_1Analyser-members.html  classbotanist_1_1Analyser.html  classbotanist_1_1DoubleEvaluator-members.html  classbotanist_1_1DoubleEvaluator.html  classbotanist_1_1Serializer-members.html  classbotanist_1_1Serializer.html  classbotanist_1_1Tokenizer-members.html  classbotanist_1_1Tokenizer.html  dir_210e410aa7f9a82ce0c7022cc0c6923d.html  dir_5128f5381027bfd31797685604392a08.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d607dc85f8fd954af184de4643c3eb09.html  double_8hpp.html  double_8hpp_source.html  doxygen.css  index.html  serializer_8hpp.html  serializer_8hpp_source.html  structbotanist_1_1SyntaxNode-members.html  structbotanist_1_1SyntaxNode.html  structbotanist_1_1Token-members.html  structbotanist_1_1Token.html  style.css  syntaxnode_8hpp.html  syntaxnode_8hpp_source.html  token_8hpp.html  token_8hpp_source.html  tokenizer_8hpp.html  tokenizer_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_6.js  enumvalues_8.js  enumvalues_9.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  pages_1.js  searchdata.js  variables_1.js
include/: analyser.hpp  evaluator.hpp  parse_elements.hpp  parser.hpp  serializer.hpp  syntaxtree.hpp  token.hpp  tokenizer.hpp
include/botanist/: analyser.hpp  parser.hpp  serializer.hpp  syntaxnode.hpp  syntaxtree.hpp  token.hpp  tokenizer.hpp
include/botanist/evaluator/: double.hpp
include/evaluator/: double.hpp
src/: CMakeLists.txt  main.cpp  parse_elements.cpp  tokenize.cpp
src/analyser/: analyse.cpp  dump.cpp  func.cpp
src/evaluator/: double.cpp  operate.cpp
src/parser/: parser.cpp
src/serializer/: dump.cpp  serialize.cpp
src/tokenizer/: dump.cpp  func.cpp  parse_elements.cpp  tokenize.cpp
tests/: CMakeLists.txt  test_analyse.cpp  test_evaluate.cpp  test_tokenize.cpp
tests_avr/: CMakeLists.txt  isrs.cpp  test_analyse.cpp  test_evaluate.cpp  test_tokenize.cpp  testcase.cpp  testcase.hpp  testcase_capture.py
